reimplement window scrollbar chrome attribute. bug 111524 r=hyatt,jst